# Sylveste

./: .git-autosync.disabled  .gitignore  AGENTS.md  BLOCKED.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  GEMINI.md  MISSION.md  PHILOSOPHY.md  README.md  clone-subrepos.sh  estimate-costs.sh  install.sh  interlab-heuristics.sh  interlab-route-heuristics.sh  interlab.ideas.md  interlab.jsonl  interlab.md  jnotnhb2ancm2a8iaoeeepdhbgbg7bmk  manifest  subrepos.txt  uninstall.sh
.beads/: .beads-credential-key  .gitignore  PRIME.md  beads.db.migrated  close-and-sync.sh  config.yaml  dolt-backup.json  dolt-monitor.pid  dolt-server.activity  dolt-server.pid  heal-dolt.sh  interactions.jsonl  issues.jsonl  last-touched  metadata.json  pull.sh  push-state.json  push.sh  recover.sh
.claude/: memory-modularity-research.md  settings.json
.clavain/: orphan-triage-2026-04-10.md
.gemini/: settings.json
.github/: CODEOWNERS  dependabot.yml
.interfluence/: config.yaml  config.yaml.stakeholders-ref  corpus-index.yaml  voice-profile.md
.interwatch/: watchables.yaml
.serena/: project.yml
agents/: architecture.md  beads-workflow.md  design-doctrine.md  development-workflow.md  operational-guides.md  prerequisites.md  session-protocol.md
data/: cost-trajectory.csv
docs/: CNAME  (+24 more)
interverse/interseed/: AGENTS.md  CLAUDE.md  pyproject.toml
interverse/interseed/.claude-plugin/: plugin.json
interverse/interseed/config/: default.yaml
interverse/interseed/src/interseed/: __init__.py  __main__.py  config.py  context.py  db.py  graduate.py  models.py  refine.py  server.py
(+2686 files in other folders)
