[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interseed"
version = "0.1.0"
description = "Idea garden: capture, refine, and graduate ideas from rough seeds to actionable plans"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MK", email = "mistakeknot@vibeguider.org" }
]
keywords = ["ideas", "refinement", "incubation", "mcp-server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
interseed-mcp = "interseed.server:main"
interseed = "interseed.__main__:cli"

[project.urls]
Homepage = "https://github.com/mistakeknot/interseed"
Repository = "https://github.com/mistakeknot/interseed"

[tool.hatch.build.targets.wheel]
packages = ["src/interseed"]
